--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,3 +1,5 @@
+- id: introduction1
+  translation: Technology Blogs
 - id: introduction2
   translation: KubeSphere®️ 2020 All Rights Reserved.
 - id: introduction3
