--- a/i18n/zh.yaml
+++ b/i18n/zh.yaml
@@ -1,3 +1,9 @@
+- id: introduction1
+  translation: 技术博客
+- id: introduction3
+  translation: 发布于
+- id: introduction4
+  translation: 技术博客
 - id: introduction8
   translation: 欢迎使用 KubeSphere 文档
 - id: introduction9
