--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -20,3 +20,7 @@
   translation: Open Source Community
 - id: introduction11
   translation: KubeSphere is committed to the open source contribution of cloud native technology, enriching the ecology of the open source community
+- id: introduction12
+  translation: Goto Github
+
+
