--- a/i18n/tr.yaml
+++ b/i18n/tr.yaml
@@ -1,2 +1,20 @@
 - id: introduction2
-  translation: ''
+  translation: KubeSphere®️ 2020 Tüm Hakları Saklıdır.
+- id: introduction3
+  translation: Published at
+- id: introduction4
+  translation: KubeCon & QCon
+- id: introduction5
+  translation: Abone Ol
+- id: introduction6
+  translation: Lütfen e-posta adresinizi girin.
+- id: introduction7
+  translation: KubeSphere'den son haberleri almak için haber ağımıza abone olabilirsiniz.
+- id: introduction8
+  translation: KubeSphere Dokümantasyon'a Hoşgeldiniz
+- id: introduction9
+  translation: KubeSphere servislerini ve size sunduklarını mümkün olduğunda açık anlatacağız.
+- id: introduction10
+  translation: Open Source Topluluk
+- id: introduction11
+  translation: KubeSphere, açık kaynak topluluğunun ekolojisini zenginleştirerek bulut yerel teknolojisinin, açık kaynak katkısına kendini adamıştır.
