--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -34,6 +34,6 @@
   translation: 2.This demo account is only allowed to view parts of UI
 - id: demo content 3
   translation: 3.It's recommended that install KubeSphere in your environment
-- id: Read More
-  translation: Read More
+- id: Coming Soon
+  translation: Coming Soon
 
