--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -38,3 +38,8 @@
   translation: Coming Soon
 - id: Read More
   translation: Read More
+- id: We can’t find the page that you’re looking for :(
+  translation: We can’t find the page that you’re looking for :(
+- id: Go To Home
+  translation: Go To Home
+
