--- a/i18n/zh.yaml
+++ b/i18n/zh.yaml
@@ -1,7 +1,7 @@
 - id: introduction1
   translation: 技术博客
 - id: introduction2
-  translation: " "
+  translation: "KubeSphere®️ 2020 All Rights Reserved."
 - id: introduction3
   translation: 发布于
 - id: introduction4
@@ -11,7 +11,7 @@
 - id: introduction6
   translation: 请输入你的邮箱地址
 - id: introduction7
-  translation: " "
+  translation: "通过邮件接收 KubeSphere 最新的技术博客与产品更新的通知"
 - id: introduction8
   translation: 欢迎使用 KubeSphere 文档
 - id: introduction9
@@ -20,3 +20,25 @@
   translation: 开源社区
 - id: introduction11
   translation: 分享云原生领域最前沿的技术干货与开发实践文章，以及 KubeSphere 产品最新的动态。
+- id: introduction12
+  translation: 访问 GitHub
+- id: email is required
+  translation: 请提供您的邮箱
+- id: Please enter a valid email address.
+  translation: 请输入有效的邮箱地址!
+- id: Demo
+  translation: Demo
+- id: demo content 1
+  translation: "1.体验账号： demo1 / Demo123"
+- id: demo content 2
+  translation: 2.该账号仅开放了部分 UI 界面查看权限
+- id: demo content 3
+  translation: 3.建议自行安装体验完整的管理功能
+- id: Coming Soon
+  translation: Coming Soon
+- id: Read More
+  translation: Read More
+- id: We can’t find the page that you’re looking for :(
+  translation: We can’t find the page that you’re looking for :(
+- id: Go To Home
+  translation: Go To Home
