--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -42,3 +42,15 @@
   translation: We can’t find the page that you’re looking for :(
 - id: Go To Home
   translation: Go To Home
+- id: icon
+  translation: icon
+- id: background image
+  translation: background image
+- id: background image
+  translation: background image
+- id: kubesphere console screenshot
+  translation: kubesphere console screenshot
+
+
+
+
