--- a/i18n/zh.yaml
+++ b/i18n/zh.yaml
@@ -41,7 +41,7 @@
 - id: We can’t find the page that you’re looking for :(
   translation: We can’t find the page that you’re looking for :(
 - id: Go To Home
-  translation: Go To Home
+  translation: 返回首页
 - id: icon
   translation: 图标
 - id: background image
