--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -3,7 +3,7 @@
 - id: introduction2
   translation: KubeSphere®️ 2020 All Rights Reserved.
 - id: introduction3
-  translation: Published at
+  translation: Published on
 - id: introduction4
   translation: KubeCon & QCon
 - id: introduction5
