change translate id

--- a/i18n/tr.yaml
+++ b/i18n/tr.yaml
@@ -1,20 +1,20 @@
-- id: introduction2
+- id: KubeSphere®️ 2020 All Rights Reserved.
   translation: KubeSphere®️ 2020 Tüm Hakları Saklıdır.
-- id: introduction3
+- id: Published on
   translation: Published on
-- id: introduction4
+- id: KubeCon & QCon
   translation: KubeCon & QCon
-- id: introduction5
+- id: Subscribe
   translation: Abone Ol
-- id: introduction6
+- id: Please enter your email address
   translation: Lütfen e-posta adresinizi girin.
-- id: introduction7
+- id: Receive the latest news, articles and updates from KubeSphere
   translation: KubeSphere'den son haberleri almak için haber ağımıza abone olabilirsiniz.
-- id: introduction8
+- id: Welcome to the KubeSphere Documentation
   translation: KubeSphere Dokümantasyon'a Hoşgeldiniz
-- id: introduction9
+- id: We will introduce the services and features of KubeSphere with clear and concise pictures and texts as far as possible.
   translation: KubeSphere servislerini ve size sunduklarını mümkün olduğunda açık anlatacağız.
-- id: introduction10
+- id: Open Source Community
   translation: Open Source Topluluk
-- id: introduction11
+- id: KubeSphere is committed to the open source contribution of cloud native technology, enriching the ecosystem of the open source community.
   translation: KubeSphere, açık kaynak topluluğunun ekolojisini zenginleştirerek bulut yerel teknolojisinin, açık kaynak katkısına kendini adamıştır.
