--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,26 +1,26 @@
-- id: introduction1
+- id: Technology Blogs
   translation: Technology Blogs
-- id: introduction2
+- id: KubeSphere®️ 2020 All Rights Reserved.
   translation: KubeSphere®️ 2020 All Rights Reserved.
-- id: introduction3
+- id: Published on
   translation: Published on
-- id: introduction4
+- id: KubeCon & QCon
   translation: KubeCon & QCon
-- id: introduction5
+- id: Subscribe
   translation: Subscribe
-- id: introduction6
+- id: Please enter your email address
   translation: Please enter your email address
-- id: introduction7
+- id: Receive the latest news, articles and updates from KubeSphere
   translation: Receive the latest news, articles and updates from KubeSphere
-- id: introduction8
+- id: Welcome to the KubeSphere Documentation
   translation: Welcome to the KubeSphere Documentation
-- id: introduction9
+- id: We will introduce the services and features of KubeSphere with clear and concise pictures and texts as far as possible.
   translation: We will introduce the services and features of KubeSphere with clear and concise pictures and texts as far as possible.
-- id: introduction10
+- id: Open Source Community
   translation: Open Source Community
-- id: introduction11
+- id: KubeSphere is committed to the open source contribution of cloud native technology, enriching the ecosystem of the open source community.
   translation: KubeSphere is committed to the open source contribution of cloud native technology, enriching the ecosystem of the open source community.
-- id: introduction12
+- id: Go to GitHub
   translation: Go to GitHub
 - id: email is required
   translation: email is required!
