--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -65,11 +65,11 @@
 - id: Next
   translation: Next
 - id: edit
-  translation: edit
+  translation: Edit
 - id: feedback
-  translation: feedback
+  translation: Feedback
 - id: share
-  translation: share
+  translation: Share
 
 
 
