change file path

--- a/i18n/zh.yaml
+++ b/i18n/zh.yaml
@@ -43,7 +43,7 @@
 - id: Read More
   translation: Read More
 - id: We can’t find the page that you’re looking for :(
-  translation: We can’t find the page that you’re looking for :(
+  translation: 没有你想找的页面 :(
 - id: Go To Home
   translation: 返回首页
 - id: icon
