add notice and tabs

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -70,6 +70,14 @@
   translation: Feedback
 - id: share
   translation: Share
+- id: note
+  translation: Note
+- id: tip
+  translation: Tip
+- id: info
+  translation: Info
+- id: warning
+  translation: Warning
 
 
 
