--- a/i18n/zh.yaml
+++ b/i18n/zh.yaml
@@ -53,7 +53,7 @@
 - id: kubesphere console screenshot
   translation: kubesphere console 截图
 - id: Learn More
-  translation: 查看更过
+  translation: 查看更多
 - id: Download this page (PDF)
   translation: 下载该页 (PDF)
 - id: Last updated
