fix translate and style

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -78,7 +78,7 @@
   translation: Info
 - id: warning
   translation: Warning
-- id: Enter keywords to get help quickly
-  translation: Enter keywords to get help quickly
+- id: Search Documentation
+  translation: Search Documentation
 
 
