--- a/i18n/zh.yaml
+++ b/i18n/zh.yaml
@@ -78,5 +78,5 @@
   translation: 信息
 - id: warning
   translation: 警告
-- id: Enter keywords to get help quickly
-  translation: 输入关键字快速获取帮助
+- id: Search Documentation
+  translation: 搜索文档
