Update previous page UI
Signed-off-by: Sherlock113 <sherlockxu@yunify.com>

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -60,8 +60,8 @@
   translation: Last updated
 - id: What’s on this Page
   translation: What’s on this Page
-- id: Last
-  translation: Last
+- id: Previous
+  translation: Previous
 - id: Next
   translation: Next
 - id: edit
