--- a/i18n/zh.yaml
+++ b/i18n/zh.yaml
@@ -60,7 +60,7 @@
   translation: 最新更新
 - id: What’s on this Page
   translation: 页面内容
-- id: Last
+- id: Previous
   translation: 上一篇
 - id: Next
   translation: 下一篇
