--- a/i18n/zh.yaml
+++ b/i18n/zh.yaml
@@ -41,7 +41,7 @@
 - id: Coming Soon
   translation: Coming Soon
 - id: Read More
-  translation: Read More
+  translation: 了解更多
 - id: We can’t find the page that you’re looking for :(
   translation: 没有你想找的页面 :(
 - id: Go To Home
