--- a/i18n/zh.yaml
+++ b/i18n/zh.yaml
@@ -9,7 +9,7 @@
 - id: Subscribe
   translation: 订阅
 - id: Please enter your email address
-  translation: 请输入你的邮箱地址
+  translation: 请输入您的邮箱地址
 - id: Receive the latest news, articles and updates from KubeSphere
   translation: "通过邮件接收 KubeSphere 最新的技术博客与产品更新的通知"
 - id: Welcome to the KubeSphere Documentation
