--- a/i18n/zh.yaml
+++ b/i18n/zh.yaml
@@ -82,3 +82,7 @@
   translation: 搜索文档
 - id: ALL
   translation: 全部
+- id: Watch replay
+  translation: 观看回放
+- id: View details
+  translation: 了解详情
