--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -80,5 +80,27 @@
   translation: Warning
 - id: Search Documentation
   translation: Search Documentation
-
-
+- id: Course theme
+  translation: Course theme
+- id: Course benefits
+  translation: Course benefits
+- id: Video tutorial
+  translation: Video tutorial
+- id: Graphic Course
+  translation: Graphic Course
+- id: Start learning
+  translation: Start learning
+- id: View graphic
+  translation: View graphic
+- id: Apply for the job
+  translation: Apply for the job
+- id: View more jobs
+  translation: View more jobs
+- id: Cloud Native Technology Class
+  translation: Cloud Native Technology Class
+- id: warnGraphic explanation
+  translation: Graphic explanation
+- id: PPT courseware
+  translation: PPT courseware
+- id: Self-test
+  translation: Self-test
