--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -60,6 +60,8 @@
   translation: Last updated
 - id: What’s on this Page
   translation: What’s on this Page
+- id: Content
+  translation: Content
 - id: Previous
   translation: Previous
 - id: Next
