--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -121,4 +121,4 @@
 - id: Version Tip
   translation: You are viewing documentation for KubeSphere version:{{ .version }}
 - id: Version Description
-  translation: Kubernetes {{ .version }} documentation is no longer actively maintained. The version you are currently viewing is a static snapshot. For up-to-date documentation, see <a href='https://kubesphere.io/docs' target='_blank'>the latest version</a>.
+  translation: KubeSphere {{ .version }} documentation is no longer actively maintained. The version you are currently viewing is a static snapshot. For up-to-date documentation, see <a href='https://kubesphere.io/docs' target='_blank'>the latest version</a>.
