--- a/content/zh/live/3.1-live.md
+++ b/content/zh/live/3.1-live.md
@@ -1,6 +1,7 @@
 ---
 title: KubeSphere v3.1 开源社区交流会直播回放
-description:
+description: KubeSphere 3.1 全新发布！主打 “延伸至边缘侧的容器混合云”，新增了对 “边缘计算” 场景的支持。v3.1.0 支持 “计量计费”，让基础设施的运营成本更清晰，进一步优化了在 “多云、多集群、多团队、多租户” 等应用场景下的使用体验，增强了 “多集群管理、多租户管理、可观测性、DevOps、应用商店、微服务治理” 等特性。
+keywords: KubeSphere,KubeSphere 3.1.0,计量计费,DevOps
 css: scss/live-detail.scss
 
 section1:
