update the page of live
Signed-off-by: faweizhao26 <faweizhao@yunify.com>

--- a/i18n/zh.yaml
+++ b/i18n/zh.yaml
@@ -88,6 +88,8 @@
   translation: 观看直播
 - id: View details
   translation: 了解详情
+- id: Wonderful review
+  translation: 精彩回顾
 - id: Course theme
   translation: 课程主题
 - id: Course benefits
