--- a/content/zh/live/3.1-live.md
+++ b/content/zh/live/3.1-live.md
@@ -19,3 +19,5 @@ section1:
 KubeSphere 3.1 全新发布！主打 “延伸至边缘侧的容器混合云”，新增了对 “边缘计算” 场景的支持。v3.1.0 支持 “计量计费”，让基础设施的运营成本更清晰，进一步优化了在 “多云、多集群、多团队、多租户” 等应用场景下的使用体验，增强了 “多集群管理、多租户管理、可观测性、DevOps、应用商店、微服务治理” 等特性。
 
 此次交流会特面向社区开放交流，将为大家演示 KubeSphere 3.1 新特性与后续规划。
+
+![3.1live](https://pek3b.qingstor.com/kubesphere-community/images/3.1live-poster.jpg)
