--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -126,3 +126,11 @@
   translation: Install on Kubernetes
 - id: Install on Linux
   translation: Install on Linux
+- id: Was this page Helpful?
+  translation: Was this page Helpful?
+- id: 'Yes'
+  translation: 'Yes'
+- id: 'No'
+  translation: 'No'
+- id: Msg-Thank
+  translation: Thanks for the feedback. If you have a specific question about how to use KubeSphere, ask it on Slack. Open an issue in the GitHub repo if you want to report a problem or suggest an improvement.
