--- a/i18n/zh.yaml
+++ b/i18n/zh.yaml
@@ -130,3 +130,11 @@
   translation: 在 Kubernetes 安装
 - id: Install on Linux
   translation: 在 Linux 安装
+- id: Was this page Helpful?
+  translation: 这篇文章对您有帮助吗？
+- id: 'Yes'
+  translation: 是
+- id: 'No'
+  translation: 否
+- id: Msg-Thank
+  translation: 感谢您的反馈。如果您有关于如何使用 KubeSphere 的具体问题，请在 Slack 上提问。如果您想报告问题或提出改进建议，请在 GitHub 存储库中打开问题。
